Checkpoint - progress on racnew2